# simulationToolsCompPhy

./: CMakeLists.txt  README.md
compPhy/: MACRO.h  PP_COORD.cpp  PP_COORD.h  PP_FDTD_1D.cpp  PP_FDTD_1D.h  PP_RK4.cpp  PP_RK4.h  PP_el_hahn.cpp  PP_el_hahn.h  PP_euler.cpp  PP_euler.h  PP_graph.cpp  PP_graph.h  PP_object.cpp  PP_object.h  PP_particle.cpp  PP_particle.h  PP_particle_set.cpp  PP_particle_set.h  PP_rk4.cpp  PP_rk4.h  PP_sigRMN.cpp  PP_sigRMN.h  PP_smartAlloc.cpp  PP_smartAlloc.h
test/FDTD1D/: CMakeLists.txt  main.cpp
test/euler/: CMakeLists.txt  bidon.cpp  bidon.h  main.cpp
test/graph/: CMakeLists.txt  main.cpp
test/multiParticlesSystem/2points/: CMakeLists.txt  main.cpp
test/multiParticlesSystem/3points/: CMakeLists.txt  main.cpp
test/multiParticlesSystem/Xparticles/: CMakeLists.txt  PP_game.cpp  PP_game.h  PP_player.cpp  PP_player.h  main.cpp
test/rk4/: CMakeLists.txt  bidon.cpp  bidon.h  main.cpp
test/simuEchoSpin/: CMakeLists.txt  MRIsimulation.m  main.cpp
tools/: C_matrix.h  C_vector.h
visualization/: CMakeLists.txt  README.md  simpleIteraction.cpp
